--- a/html/usuario.html
+++ b/html/usuario.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Perfil de Usuario</title>
+  <link rel="stylesheet" href="estilos.css/average.css">
   <link rel="stylesheet" href="estilos.css/usuario.css">
 </head>
 <body>
