literalmente de todo

--- a/html/index.html
+++ b/html/index.html
@@ -43,7 +43,7 @@
 
   <!-- ...existing code... -->
   <div class="reserva">
-    <button onclick="window.location.href='promociones.html'">
+    <button onclick="window.location.href='reservar.html'"  >
       <span style="font-size:1.3em;vertical-align:middle;">✂️</span>
       Reservar Turno
     </button>
