--- a/html/usuario.html
+++ b/html/usuario.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Perfil de Usuario</title>
-  <link rel="stylesheet" href="estilos.css/average.css">
-  <link rel="stylesheet" href="estilos.css/usuario.css">
+<link rel="stylesheet" href="../css/average.css">
+<link rel="stylesheet" href="../css/usuario.css">
 </head>
 <body>
   <div class="container">
@@ -37,5 +37,6 @@
       <div class="turno-item">15:30 PM - Barba con Diego</div>
     </div>
   </div>
+  <script src="../js/perfil.js"></script>
 </body>
 </html>
